--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/registration.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/registration.html
@@ -23,6 +23,8 @@
      th:href="@{/assets/css/font-awesome.min.css}" />
     <link rel="stylesheet" type="text/css"  href="../static/assets/css/mainregister.css" media="all"
           th:href="@{/assets/css/mainregister.css}" />
+    <link rel="stylesheet" type="text/css"  href="../static/assets/css/daterangepicker.css" media="all"
+          th:href="@{/assets/css/daterangepicker.css}" />
     <!-- Font special for pages-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link rel="stylesheet" type="text/css"  href="../static/assets/css/select2.min.css" media="all"
@@ -78,14 +80,14 @@
 
 <!-- Jquery JS-->
 <!--<script src="vendor/jquery/jquery.min.js"></script>-->
-<script type="text/javascript" th:src="@{/assets/scripts/vendors/jquery/jquery.min.js}" />
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <!-- Vendor JS-->
 <!--<script src="vendor/select2/select2.min.js"></script>-->
-<script type="text/javascript" th:src="@{/assets/scripts/vendor/select2/select2.min.js}" />
+<script type="text/javascript" th:src="@{/assets/scripts/select2.min.js}" />
 <!--<script src="vendor/datepicker/moment.min.js"></script>-->
-<script type="text/javascript" th:src="@{/assets/scripts/vendor/datepicker/moment.min.js}" />
+<script type="text/javascript" th:src="@{/assets/scripts/moment.min.js}" />
 <!--<script src="vendor/datepicker/daterangepicker.js"></script>-->
-<script type="text/javascript" th:src="@{/assets/scripts/vendor/datepicker/daterangepicker.js}" />
+<script type="text/javascript" th:src="@{/assets/scripts/daterangepicker.js}" />
 
 <!-- Main JS-->
 <!--<script src="js/global.js"></script>-->
