--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/login.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/login.html
@@ -51,15 +51,24 @@
 				<span class="login100-form-title p-b-41">
 					Account Login
 				</span>
-				<form class="login100-form validate-form p-b-33 p-t-5">
+				<h2 class="form-signin-heading">Welcome to Jakes Ajao, please login</h2>
+				<div th:if="${param.error}">
+					<div class="alert alert-danger">Invalid username or password.
+					</div>
+				</div>
+				<div th:if="${param.logout}">
+					<div class="alert alert-info">You have been logged out.</div>
+				</div>
+				<form class="login100-form validate-form p-b-33 p-t-5" method="POST" th:action="@{/login}">>
 
 					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" type="text" name="username" placeholder="User name">
+						<input class="input100" type="text" id="name" name="name" placeholder="Username" required autofocus class="form-control">
 						<span class="focus-input100" data-placeholder="&#xe82a;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<input class="input100" type="password" name="pass" placeholder="Password">
+						<input class="input100" type="password" id="password" name="password"  class="form-control" placeholder="Password"
+						required>
 						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
 					</div>
 
@@ -68,7 +77,10 @@
 							Login
 						</button>
 					</div>
-
+					<div class="form-group">
+                        <span>New user? <a href="/" th:href="@{/registration}">Register
+       				 here</a></span>
+					</div>
 				</form>
 			</div>
 		</div>
@@ -85,8 +97,8 @@
 
 	<script type="text/javascript" th:src="@{/assets/scripts/vendor/animsition/js/animsition.min.js}" />
 <!--===============================================================================================-->
-<!--	<script src="vendor/bootstrap/js/popper.js"></script>-->
-<!--	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>-->
+	<script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
+	<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
 	<script type="text/javascript" th:src="@{/assets/scripts/vendor/bootstrap/js/popper.js}" />
 	<script type="text/javascript" th:src="@{/assets/scripts/vendor/bootstrap/js/bootstrap.min.js}" />
 <!--===============================================================================================-->
