--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/login.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/login.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
-<!--===============================================================================================-->	
+<!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="../static/assets/images/icons/favicon.ico"
 		  th:href="@{/assets/images/icons/favicon.ico}" />
 
@@ -44,7 +44,7 @@
 <!--===============================================================================================-->
 </head>
 <body>
-	
+
 	<div class="limiter">
 		<div class="container-login100" th:style="'background: url(/assets/images/bg-01.jpg) '">
 			<div class="wrap-login100 p-t-30 p-b-50">
@@ -59,16 +59,15 @@
 				<div th:if="${param.logout}">
 					<div class="alert alert-info">You have been logged out.</div>
 				</div>
-				<form class="login100-form validate-form p-b-33 p-t-5" method="POST" th:action="@{/login}">>
+				<form class="login100-form validate-form p-b-33 p-t-5" method="POST" th:action="@{/login}">
 
-					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" type="text" id="name" name="name" placeholder="Username" required autofocus class="form-control">
+					<div class="wrap-input100 validate-input" data-validate = "Enter firstName">
+						<input class="input100" type="text" id="username" name="username" placeholder="Username" autofocus required>
 						<span class="focus-input100" data-placeholder="&#xe82a;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<input class="input100" type="password" id="password" name="password"  class="form-control" placeholder="Password"
-						required>
+						<input class="input100" type="password" id="password" name="password" placeholder="Password" required>
 						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
 					</div>
 
@@ -77,7 +76,7 @@
 							Login
 						</button>
 					</div>
-					<div class="form-group">
+					<div class="container-login100-form-btn m-t-32">
                         <span>New user? <a href="/" th:href="@{/registration}">Register
        				 here</a></span>
 					</div>
@@ -85,24 +84,18 @@
 			</div>
 		</div>
 	</div>
-	
+
 
 	<div id="dropDownSelect1"></div>
-	
+
 <!--===============================================================================================-->
 
 	<script type="text/javascript" th:src="@{/assets/scripts/vendor/jquery/jquery-3.2.1.min.js}" />
-<!--===============================================================================================-->
-<!--	<script src="vendor/animsition/js/animsition.min.js"></script>-->
-
-	<script type="text/javascript" th:src="@{/assets/scripts/vendor/animsition/js/animsition.min.js}" />
-<!--===============================================================================================-->
 	<script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
 	<script type="text/javascript" th:src="@{/assets/scripts/vendor/bootstrap/js/popper.js}" />
 	<script type="text/javascript" th:src="@{/assets/scripts/vendor/bootstrap/js/bootstrap.min.js}" />
 <!--===============================================================================================-->
-<!--	<script src="vendor/select2/select2.min.js"></script>-->
 
 	<script type="text/javascript" th:src="@{/assets/scripts/vendor/select2/select2.min.js}" />
 <!--===============================================================================================-->
