--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/login.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/login.html
@@ -59,16 +59,18 @@
 				<div th:if="${param.logout}">
 					<div class="alert alert-info">You have been logged out.</div>
 				</div>
-				<form class="login100-form validate-form p-b-33 p-t-5" method="POST" th:action="@{/login}">
+				<form th:action="@{/login}"  class="login100-form validate-form p-b-33 p-t-5" method="post" th:object="${login}">
 
 					<div class="wrap-input100 validate-input" data-validate = "Enter firstName">
-						<input class="input100" type="text" id="username" name="username" placeholder="Username" autofocus required>
-						<span class="focus-input100" data-placeholder="&#xe82a;"></span>
+						<input class="input100" type="text" id="email" name="email" th:field="*{email}" placeholder="Email" autofocus required>
+						<span style="color:red" th:if="${#fields.hasErrors('email')}"
+							  th:errors="*{email}"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<input class="input100" type="password" id="password" name="password" placeholder="Password" required>
-						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
+						<input class="input100" type="password" id="password" name="password"  th:field="*{password}" placeholder="Password" required>
+						<span style="color:red" th:if="${#fields.hasErrors('password')}"
+							  th:errors="*{password}"></span>
 					</div>
 
 					<div class="container-login100-form-btn m-t-32">
