--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/login.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/login.html
@@ -59,18 +59,16 @@
 				<div th:if="${param.logout}">
 					<div class="alert alert-info">You have been logged out.</div>
 				</div>
-				<form th:action="@{/login}"  class="login100-form validate-form p-b-33 p-t-5" method="post" th:object="${login}">
+				<form th:action="@{/index}"  class="login100-form validate-form p-b-33 p-t-5" method="post">
 
 					<div class="wrap-input100 validate-input" data-validate = "Enter firstName">
-						<input class="input100" type="text" id="email" name="email" th:field="*{email}" placeholder="Email" autofocus required>
-						<span style="color:red" th:if="${#fields.hasErrors('email')}"
-							  th:errors="*{email}"></span>
+						<input class="input100" type="text" id="username" name="username"  placeholder="Email" autofocus required>
+
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<input class="input100" type="password" id="password" name="password"  th:field="*{password}" placeholder="Password" required>
-						<span style="color:red" th:if="${#fields.hasErrors('password')}"
-							  th:errors="*{password}"></span>
+						<input class="input100" type="password" id="password" name="password"  placeholder="Password" required>
+
 					</div>
 
 					<div class="container-login100-form-btn m-t-32">
