--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/index.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/index.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
     <meta name="description" content="This is an example dashboard created using build-in elements and components.">
     <meta name="msapplication-tap-highlight" content="no">
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
 
     <!--
     =========================================================
@@ -67,6 +68,9 @@
                         </div>
                         <button class="close"></button>
                     </div>
+                    <p>
+                        Welcome <span sec:authentication="principal.username"></span>
+                    </p>
                     <ul class="header-menu nav">
                         <li class="nav-item">
                             <a href="javascript:void(0);" class="nav-link">
@@ -1375,6 +1379,8 @@
                 <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
         </div>
     </div>
+    <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
 
     <script type="text/javascript" th:src="@{/assets/scripts/main.js}" />
 </body>
