Navigation remove redundancy

--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/index.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="This is an example dashboard created using build-in elements and components.">
     <meta name="msapplication-tap-highlight" content="no">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" type="text/css" />
     <!--
     =========================================================
     * ArchitectUI HTML Theme Dashboard - v1.0.0
@@ -69,29 +69,10 @@
                         <button class="close"></button>
                     </div>
                     <p>
-                      Welcome <span th:text="${gituser}">User</span>
+
 <!--                        Welcome <span sec:authentication="principal.username"></span>-->
                     </p>
-                    <ul class="header-menu nav">
-                        <li class="nav-item">
-                            <a href="javascript:void(0);" class="nav-link">
-                                <i class="nav-link-icon fa fa-database"> </i>
-                                Statistics
-                            </a>
-                        </li>
-                        <li class="btn-group nav-item">
-                            <a href="javascript:void(0);" class="nav-link">
-                                <i class="nav-link-icon fa fa-edit"></i>
-                                Projects
-                            </a>
-                        </li>
-                        <li class="dropdown nav-item">
-                            <a href="javascript:void(0);" class="nav-link">
-                                <i class="nav-link-icon fa fa-cog"></i>
-                                Settings
-                            </a>
-                        </li>
-                    </ul>        </div>
+                     </div>
                 <div class="app-header-right">
                     <div class="header-btn-lg pr-0">
                         <div class="widget-content p-0">
@@ -114,10 +95,10 @@
                                 </div>
                                 <div class="widget-content-left  ml-3 header-user-info">
                                     <div class="widget-heading">
-                                        Alina Mclourd
+                                        Welcome <span th:text="${gituser}">User</span>
                                     </div>
                                     <div class="widget-subheading">
-                                        VP People Manager
+                                        ROLE USER
                                     </div>
                                 </div>
                                 <div class="widget-content-right header-user-info ml-3">
