--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/login.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/login.html
@@ -41,7 +41,9 @@
 		  th:href="@{/assets/css/util.css}" />
 	<link rel="stylesheet" type="text/css" href="../static/assets/css/main2.css"
 		  th:href="@{/assets/css/main2.css}" />
-<!--===============================================================================================-->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" type="text/css" />
+
+	<!--===============================================================================================-->
 </head>
 <body>
 
