--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/index.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/index.html
@@ -1114,35 +1114,39 @@
                                             </div>
                                         </div>
                                     </div>
+<
                                     <div class="table-responsive">
                                         <table class="align-middle mb-0 table table-borderless table-striped table-hover">
                                             <thead>
                                             <tr>
                                                 <th class="text-center">#</th>
-                                                <th>Name</th>
-                                                <th class="text-center">City</th>
-                                                <th class="text-center">Status</th>
-                                                <th class="text-center">Actions</th>
+<!--                                                <th>Name</th>-->
+                                                <th class="text-center">id</th>
+                                                <th class="text-center">Name</th>
+                                                <th class="text-center">Description</th>
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            <tr>
-                                                <td class="text-center text-muted">#345</td>
-                                                <td>
-                                                    <div class="widget-content p-0">
-                                                        <div class="widget-content-wrapper">
-                                                            <div class="widget-content-left mr-3">
-                                                                <div class="widget-content-left">
-                                                                    <img width="40" class="rounded-circle" src="assets/images/avatars/4.jpg" alt="">
-                                                                </div>
-                                                            </div>
-                                                            <div class="widget-content-left flex2">
-                                                                <div class="widget-heading">John Doe</div>
-                                                                <div class="widget-subheading opacity-7">Web Developer</div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </td>
+                                            <tr th:each="repo: ${repolist}">
+                                                <td th:text="${repo.id}">2</td>
+                                                <td th:text="${repo.name}">Spring in Action</td>
+                                                <td th:text="${repo.description}">Wrox</td>
+                                            </tr>
+<!--                                                <td>-->
+<!--                                                    <div class="widget-content p-0">-->
+<!--                                                        <div class="widget-content-wrapper">-->
+<!--                                                            <div class="widget-content-left mr-3">-->
+<!--                                                                <div class="widget-content-left">-->
+<!--                                                                    <img width="40" class="rounded-circle" src="assets/images/avatars/4.jpg" alt="">-->
+<!--                                                                </div>-->
+<!--                                                            </div>-->
+<!--                                                            <div class="widget-content-left flex2">-->
+<!--                                                                <div class="widget-heading">John Doe</div>-->
+<!--                                                                <div class="widget-subheading opacity-7">Web Developer</div>-->
+<!--                                                            </div>-->
+<!--                                                        </div>-->
+<!--                                                    </div>-->
+<!--                                                </td>-->
                                                 <td class="text-center">Madrid</td>
                                                 <td class="text-center">
                                                     <div class="badge badge-warning">Pending</div>
@@ -1228,6 +1232,7 @@
                                             </tbody>
                                         </table>
                                     </div>
+
                                     <div class="d-block text-center card-footer">
                                         <button class="mr-2 btn-icon btn-icon-only btn btn-outline-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
                                         <button class="btn-wide btn btn-success">Save</button>
