--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/layout.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/layout.html
@@ -3,6 +3,8 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
 
 <head>
     <meta charset="utf-8">
@@ -390,7 +392,6 @@
         </div>
     </div>
 </div>
-
     <div class="app-main">
         <div class="app-sidebar sidebar-shadow">
             <div class="app-header__logo">
@@ -614,86 +615,52 @@
                     </li>
                 </ul>
             </div>
+          </div>
         </div>
-        </div>
-        <div class="app-main__outer">
-            <div class="app-main__inner">
-                <div class="row">
-                </div>
-                <div class="row">
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="main-card mb-3 card">
-                            <div class="table-responsive" style="height: 600px;overflow: scroll;">
-                                <table class="align-middle mb-0 table table-borderless table-striped table-hover">
-
-                                    <tr>
-                                        <th class="text-center">Id</th>
-                                        <th class="text-center">Name</th>
-                                        <th class="text-center">Description</th>
-<!--                                        <th class="text-center">Action</th>-->
-                                    </tr>
-                                    <tr th:each="repo: ${repolist}">
-                                        <td th:text="${repo.id}">2</td>
-                                        <td th:text="${repo.name}">Spring in Action</td>
-<!--                                        <td th:text="${'/repository/details/'+${repo.name}}">repository</td>-->
-                                        <td>Edit</td>
-                                    </tr>
-
-                                    </tr>
-                                    <!--                                            </tbody>-->
-                                </table>
-                            </div>
-
-                            <div class="d-block text-center card-footer">
-                                <button class="mr-2 btn-icon btn-icon-only btn btn-outline-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
-                                <button class="btn-wide btn btn-success">Save</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+          <div class="app-main__outer">
+            <div layout:fragment="content">
+                <p>Changing contents</p>
             </div>
-            <div class="app-wrapper-footer">
-                <div class="app-footer">
-                    <div class="app-footer__inner">
-                        <div class="app-footer-left">
-                            <ul class="nav">
-                                <li class="nav-item">
-                                    <a href="javascript:void(0);" class="nav-link">
-                                        Footer Link 1
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="javascript:void(0);" class="nav-link">
-                                        Footer Link 2
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="app-footer-right">
-                            <ul class="nav">
-                                <li class="nav-item">
-                                    <a href="javascript:void(0);" class="nav-link">
-                                        Footer Link 3
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="javascript:void(0);" class="nav-link">
-                                        <div class="badge badge-success mr-1 ml-0">
-                                            <small>NEW</small>
-                                        </div>
-                                        Footer Link 4
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>main outer
+              <div class="app-wrapper-footer">
+                  <div class="app-footer">
+                      <div class="app-footer__inner">
+                          <div class="app-footer-left">
+                              <ul class="nav">
+                                  <li class="nav-item">
+                                      <a href="javascript:void(0);" class="nav-link">
+                                          Footer Link 1
+                                      </a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a href="javascript:void(0);" class="nav-link">
+                                          Footer Link 2
+                                      </a>
+                                  </li>
+                              </ul>
+                          </div>
+                          <div class="app-footer-right">
+                              <ul class="nav">
+                                  <li class="nav-item">
+                                      <a href="javascript:void(0);" class="nav-link">
+                                          Footer Link 3
+                                      </a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a href="javascript:void(0);" class="nav-link">
+                                          <div class="badge badge-success mr-1 ml-0">
+                                              <small>NEW</small>
+                                          </div>
+                                          Footer Link 4
+                                      </a>
+                                  </li>
+                              </ul>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>main outer
         <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-    </div>
+     </div>
 </div>
 <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
