Create Path variable Security

--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/home.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/home.html
@@ -15,29 +15,31 @@
             <div class="col-md-12">
                 <div class="main-card mb-3 card">
                     <div class="table-responsive" style="height: 600px;overflow: scroll;">
+<!--                        <form th:action="@{/repository}" th:object="${user}"   class="login100-form validate-form p-b-33 p-t-5" method="post">-->
                         <table class="align-middle mb-0 table table-borderless table-striped table-hover">
-
                             <tr>
                                 <th class="text-center">Id</th>
                                 <th class="text-center">Name</th>
                                 <th class="text-center">Description</th>
+                                <th class="text-center">Action</th>
                             </tr>
                             <tr th:each="repo: ${repolist}">
                                 <td th:text="${repo.id}">2</td>
                                 <td th:text="${repo.name}">Spring in Action</td>
                                 <td th:text="${repo.description}">Spring in Action</td>
-
+                                <td><a th:href="@{'/repository/details/firstname/'+${repo.name}}">Details</a></td>
                             </tr>
 
                             </tr>
                             <!--                                            </tbody>-->
                         </table>
+<!--                        </form>-->
                     </div>
 
-<!--                    <div class="d-block text-center card-footer">-->
-<!--                        <button class="mr-2 btn-icon btn-icon-only btn btn-outline-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>-->
-<!--                        <button class="btn-wide btn btn-success">Save</button>-->
-<!--                    </div>-->
+                    <div class="d-block text-center card-footer">
+                        <button class="mr-2 btn-icon btn-icon-only btn btn-outline-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
+                        <button class="btn-wide btn btn-success">Save</button>
+                    </div>
                 </div>
             </div>
         </div>
