--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/home.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/home.html
@@ -27,7 +27,7 @@
                                 <td th:text="${repo.id}">2</td>
                                 <td th:text="${repo.name}">Spring in Action</td>
                                 <td th:text="${repo.description}">Spring in Action</td>
-                                <td><a th:href="@{'/repository/details/firstname/'+${repo.name}}">Details</a></td>
+                                <td><a th:href="@{'/repository/user/'+${git}+'/name/'+${repo.name}}">Details</a></td>
                             </tr>
 
                             </tr>
