--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/layout.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/layout.html
@@ -104,10 +104,11 @@
                                     ROLE USER
                                 </div>
                             </div>
-                            <div class="widget-content-right header-user-info ml-3">
-                                <button type="button" class="btn-shadow p-1 btn btn-primary btn-sm show-toastr-example">
-                                    <i class="fa text-white fa-calendar pr-1 pl-1"></i>
-                                </button>
+                            <div>
+                        <a th:href="@{/login?logout}">
+                            <i class="fa text-white fa-calendar pr-1 pl-1"></i>
+                            Log out
+                        </a>
                             </div>
                         </div>
                     </div>
