--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/layout.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/layout.html
@@ -498,17 +498,16 @@
                             <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                         </a>
                         <ul>
+                            <li>
+                                <a th:href="@{/}">
+                                    <i class="metismenu-icon">
+                                    </i>Home
+                                </a>
+                            </li>
                             <li><a th:href="@{/analytic}">
                                 <i class="metismenu-icon"></i>
                                 Analytics
                             </a>
-                            </li>
-
-                            <li>
-                                <a th:href="@{/index}">
-                                    <i class="metismenu-icon">
-                                    </i>Home
-                                </a>
                             </li>
                         </ul>
                     </li>
