--- a/Projects/SpringBoot/churchdatabaseAPI/src/main/resources/templates/home.html
+++ b/Projects/SpringBoot/churchdatabaseAPI/src/main/resources/templates/home.html
@@ -15,75 +15,75 @@
             <div class="col-md-12">
                 <div class="main-card mb-3 card">
                     <div class="table-responsive" style="height: 600px;overflow: scroll;">
-                        <form>
-                            <div style="margin-left:20px;margin-right:20px;">
-                                <h3 style="margin-top:15px;font-weight:bold;">Add Member</h3>
-                                <div class="form-group">
-                                        <label for="designation">Designation</label>
-                                        <select id="designation" name="designation" class="form-control">
-                                            <option value="Pastor">Pastor</option>
-                                            <option value="Dn.">Dn.</option>
-                                            <option value="Dns.">Dns.</option>
-                                            <option value="Prof.">Prof.</option>
-                                            <option value="Dr.">Dr.</option>
-                                            <option value="Mrs.">Mrs.</option>
-                                            <option value="Mr.">Mr.</option>
-                                            <option value="Miss.">Miss.</option>
-                                        </select>
-                                </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    <label for="firstName">First Name</label>
-                                    <input type="text" class="form-control" id="firstName" placeholder="First Name">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label for="lastName">Last Name</label>
-                                    <input type="text" class="form-control" id="lastName" placeholder="Last Name">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="address">Address</label>
-                                <input type="text" class="form-control" id="address" placeholder="1234 Main St">
-                            </div>
-                                <div class="form-row">
-                                    <div class="form-group col-md-6">
-                                        <label for="mobilephone1">Mobilephone 1</label>
-                                        <input type="text" class="form-control" id="mobilephone1" placeholder="07066666666">
-                                    </div>
-                                    <div class="form-group col-md-6">
-                                        <label for="mobilephone2">Mobilephone 2</label>
-                                        <input type="text" class="form-control" id="mobilephone2" placeholder="07077777777">
-                                    </div>
-                                </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-2">
-                                    <label for="city">City</label>
-                                    <input type="text" class="form-control" id="city">
-                                </div>
-                                <div class="form-group col-md-2">
-                                    <label for="town">Town</label>
-                                    <input type="text" class="form-control" id="town">
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <label for="gender">Gender</label>
-                                    <select id="gender" name="gender" class="form-control">
-                                        <option value="MALE">MALE</option>
-                                        <option value="FEMALE">FEMALE</option>
-                                    </select>
-                                </div>
-
-                            </div>
-<!--                            <div class="form-group">-->
-<!--                                <div class="form-check">-->
-<!--                                    <input class="form-check-input" type="checkbox" id="gridCheck">-->
-<!--                                    <label class="form-check-label" for="gridCheck">-->
-<!--                                        Check me out-->
-<!--                                    </label>-->
+<!--                        <form>-->
+<!--                            <div style="margin-left:20px;margin-right:20px;">-->
+<!--                                <h3 style="margin-top:15px;font-weight:bold;">Add Member</h3>-->
+<!--                                <div class="form-group">-->
+<!--                                        <label for="designation">Designation</label>-->
+<!--                                        <select id="designation" name="designation" class="form-control">-->
+<!--                                            <option value="Pastor">Pastor</option>-->
+<!--                                            <option value="Dn.">Dn.</option>-->
+<!--                                            <option value="Dns.">Dns.</option>-->
+<!--                                            <option value="Prof.">Prof.</option>-->
+<!--                                            <option value="Dr.">Dr.</option>-->
+<!--                                            <option value="Mrs.">Mrs.</option>-->
+<!--                                            <option value="Mr.">Mr.</option>-->
+<!--                                            <option value="Miss.">Miss.</option>-->
+<!--                                        </select>-->
+<!--                                </div>-->
+<!--                            <div class="form-row">-->
+<!--                                <div class="form-group col-md-6">-->
+<!--                                    <label for="firstName">First Name</label>-->
+<!--                                    <input type="text" class="form-control" id="firstName" placeholder="First Name">-->
+<!--                                </div>-->
+<!--                                <div class="form-group col-md-6">-->
+<!--                                    <label for="lastName">Last Name</label>-->
+<!--                                    <input type="text" class="form-control" id="lastName" placeholder="Last Name">-->
 <!--                                </div>-->
 <!--                            </div>-->
-                            <button type="submit" class="btn btn-primary">Create</button>
-                            </div>
-                        </form>
+<!--                            <div class="form-group">-->
+<!--                                <label for="address">Address</label>-->
+<!--                                <input type="text" class="form-control" id="address" placeholder="1234 Main St">-->
+<!--                            </div>-->
+<!--                                <div class="form-row">-->
+<!--                                    <div class="form-group col-md-6">-->
+<!--                                        <label for="mobilephone1">Mobilephone 1</label>-->
+<!--                                        <input type="text" class="form-control" id="mobilephone1" placeholder="07066666666">-->
+<!--                                    </div>-->
+<!--                                    <div class="form-group col-md-6">-->
+<!--                                        <label for="mobilephone2">Mobilephone 2</label>-->
+<!--                                        <input type="text" class="form-control" id="mobilephone2" placeholder="07077777777">-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            <div class="form-row">-->
+<!--                                <div class="form-group col-md-2">-->
+<!--                                    <label for="city">City</label>-->
+<!--                                    <input type="text" class="form-control" id="city">-->
+<!--                                </div>-->
+<!--                                <div class="form-group col-md-2">-->
+<!--                                    <label for="town">Town</label>-->
+<!--                                    <input type="text" class="form-control" id="town">-->
+<!--                                </div>-->
+<!--                                <div class="form-group col-md-4">-->
+<!--                                    <label for="gender">Gender</label>-->
+<!--                                    <select id="gender" name="gender" class="form-control">-->
+<!--                                        <option value="MALE">MALE</option>-->
+<!--                                        <option value="FEMALE">FEMALE</option>-->
+<!--                                    </select>-->
+<!--                                </div>-->
+
+<!--                            </div>-->
+<!--&lt;!&ndash;                            <div class="form-group">&ndash;&gt;-->
+<!--&lt;!&ndash;                                <div class="form-check">&ndash;&gt;-->
+<!--&lt;!&ndash;                                    <input class="form-check-input" type="checkbox" id="gridCheck">&ndash;&gt;-->
+<!--&lt;!&ndash;                                    <label class="form-check-label" for="gridCheck">&ndash;&gt;-->
+<!--&lt;!&ndash;                                        Check me out&ndash;&gt;-->
+<!--&lt;!&ndash;                                    </label>&ndash;&gt;-->
+<!--&lt;!&ndash;                                </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                            </div>&ndash;&gt;-->
+<!--                            <button type="submit" class="btn btn-primary">Create</button>-->
+<!--                            </div>-->
+<!--                        </form>-->
                     </div>
 
 <!--                    <div class="d-block text-center card-footer">-->
