--- a/Projects/SpringBoot/churchdatabaseAPI/src/main/resources/templates/login.html
+++ b/Projects/SpringBoot/churchdatabaseAPI/src/main/resources/templates/login.html
@@ -32,7 +32,7 @@
 							</div>
 							<form th:action="@{/login}" th:object="${user}"  class="my-login-validation" method="POST">
 								<div class="form-group">
-									<label for="email">E-Mail Address</label>
+									<label for="email">E-mail Address</label>
 									<input id="email" type="email" class="form-control"  name="email"  placeholder="Username" required autofocus>
 									<div class="invalid-feedback">
 										Email is invalid
@@ -59,7 +59,7 @@
 									</button>
 								</div>
 								<div class="mt-4 text-center">
-									Don't have an account? <a href="/" th:href="@{/register}">Create One</a>
+									Don't have an account? <a href="/" th:href="@{/register}" >Create One</a>
 								</div>
 							</form>
 						</div>
