--- a/Projects/SpringBoot/churchdatabaseAPI/src/main/resources/templates/charts.html
+++ b/Projects/SpringBoot/churchdatabaseAPI/src/main/resources/templates/charts.html
@@ -86,7 +86,7 @@
                                             <th scope="col">Week 2</th>
                                             <th scope="col">Week 3</th>
                                             <th scope="col">Week 4</th>
-                                            <th scope="col">Percentage(100%)</th>
+<!--                                            <th scope="col">Percentage(100%)</th>-->
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -110,7 +110,7 @@
                                             <td>
                                                 <input type="checkbox" disabled="disabled"  th:checked="${attend.week4}" th:value="${attend.id}" />
                                             </td>
-                                            <td th:text="${attend.percentage}">Percentage</td>
+<!--                                            <td th:text="${attend.percentage}">Percentage</td>-->
                                         </tr>
 
 
